# line_planner

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  package.xml
action/: MoveBaseRoute.action
config/: AreaToPath.cfg  LinePlanner.cfg
docs/: diagram.drawio
launch/: line_planner.launch  line_planner_odom.launch  sim_odom_demo.launch  sim_turtle_tf_demo.launch  turtle_tf_sim_planner.launch  uuv.launch
src/: area_router.py  area_to_path.py  area_to_path_node.py  line_planner_node.py  markers.py  move_base_route_client_example.py  navigator.py  obstacles.py  projector.py  search.py  sensor_to_obstacle_node.py  utils.py
