<package format="2">
    <name>line_planner</name>
    <version>0.0.1</version>
    <description>The line_planner package</description>
    <maintainer email="your@email.com">MoffKalast</maintainer>
    <license>MIT</license>

    <depend>rospy</depend>
    <depend>dynamic_reconfigure</depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>actionlib_msgs</build_export_depend>
    <build_export_depend>move_base_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>